tests/neg/parser-stability-7.scala
import language.postfixOps
class x0[x1] {
def x2: x1
}
trait x3 extends x0 { // error
class x2
var x2 = 0     // error
var x4 = x5 x2 // error
}
